tests/cases/ok/range_loop.p4
def main() -> None:
    total: int = 0
    for i in range(5):
        total = total + i
    print(total)

    for j in range(2, 6):
        print(j)

    for k in range(6, 0, -2):
        print(k)
