tests/cases/fail/closure_assign_capture.p4
def main() -> None:
    count: int = 0

    def bump() -> int:
        count = count + 1
        return count

    print(bump())
